# model-compression-2023

solution/: app.py  pyproject.toml
solution/configs/: config.py
solution/handlers/: data_models.py  recognition.py
solution/infrastructure/: models.py
solution/service/: recognition.py
