[tool.poetry]
name = "solution"
version = "0.1.0"
description = ""
authors = ["Roman Solomatin <36135455+Samoed@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.0"}
pydantic = "^2.4.2"
pydantic-yaml = "^1.2.0"
uvicorn = "^0.23.2"
optimum = {extras = ["onnxruntime-gpu"], version = "^1.13.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
